add raw href for images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <ul>
         <li>
           <div class="card">
-            <img src="images/bootstrap_logo.png" alt="technology-3">
+            <img src="https://github.com/Justin-Cordero/BookStats_Preview/blob/main/images/bootstrap_logo.png?raw=true" alt="technology-1">
             <div class="card-content">
               <h3 class="card-title">Bootstrap 4</h3>
               <p>Bootstrap was chosen to build the UI (user interface) for Book Stats. The focus of this project was to gain a better understanding of AJAX implementation and not necessarily the UI, so Bootstrap allowed for a quick and efficient layout that looks clean and presentable.</p>
@@ -44,7 +44,7 @@
         </li>
         <li>
           <div class="card">
-            <img src="images/javascript_logo.png" alt="technology-1">
+            <img src="https://github.com/Justin-Cordero/BookStats_Preview/blob/main/images/javascript_logo.png?raw=true" alt="technology-2">
             <div class="card-content">
               <h3 class="card-title">Javascript</h3>
               <p>Javascript was the primary technology used in the creation of the application. Specifically, I chose to build this project to work on implementing AJAX in a project, which allows the documents to load within the browser without refreshing the page.<br><br> RegEx (Regular Expressions) were also used to filter the document data and eliminate line breaks, carriage returns, and punctuation from the word counts.</p>
@@ -53,7 +53,7 @@
         </li>
         <li>
           <div class="card">
-            <img src="images/css_logo.png" alt="technology-2">
+            <img src="https://github.com/Justin-Cordero/BookStats_Preview/blob/main/images/css_logo.png?raw=true" alt="technology-3">
             <div class="card-content">
               <h3 class="card-title">CSS</h3>
               <p>Some standard CSS was used in this project to improve the look of the application.<br><br> Media queries were also included to improve the responsiveness across screen sizes where bootstrap classes were not used.</p>
@@ -82,7 +82,7 @@
         <div class="btn-center">
           <a href="https://justincordero.tech/Book_Stats/" class="btn">Live Project</a>
         </div>
-        <img src="images/bookstats_header.png" alt="project-preview">
+        <img src="https://github.com/Justin-Cordero/BookStats_Preview/blob/main/images/bookstats_header.png?raw=true" alt="project-preview">
       </div>
     </section>
   </main>
