fix grammar mistakes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="content-wrap">
         <h2 class="content-title">Need information about a book or document?</h2>
         <div class="content-text">
-          <p>Maybe you want to improve SEO on your blog posts or you are just curious about the most used words from your favorite book. Book Stats is an application designed to do just that. Using Javascript, Book Stats will parse through a text document and count the most commonly used words, the least used words and even identify the occurences of a specific word that you search for. Additionally, a list of "stop words" were included to prevent commonly used words, like conjunctions, from affecting the data results. AJAX (Asynchronous Javascript and XML) was used so the full document and data retrieved could be loaded into the webpage in real-time without the need to refresh the page.</p>
+          <p>Maybe you want to improve SEO on your blog posts, or you are just curious about the most used words from your favorite book. Book Stats is an application designed to do just that. Using JavaScript, Book Stats will parse through a text document and count the most commonly used words, the least used words, and even identify the occurrences of a specific word that you search for. Additionally, a list of "stop words" were included to prevent commonly used words, like conjunctions, from affecting the data results. AJAX (Asynchronous JavaScript and XML) was used so the full document and data could be retrieved from the server and loaded into the webpage in real-time.</p>
         </div>
       </div>
     </section>
@@ -48,8 +48,11 @@
           <div class="card">
             <img src="https://github.com/Justin-Cordero/BookStats_Preview/blob/main/images/javascript_logo.png?raw=true" alt="technology-2">
             <div class="card-content">
-              <h3 class="card-title">Javascript</h3>
-              <p>Javascript was the primary technology used in the creation of the application. Specifically, I chose to build this project to work on implementing AJAX in a project, which allows the documents to load within the browser without refreshing the page.<br><br> RegEx (Regular Expressions) were also used to filter the document data and eliminate line breaks, carriage returns, and punctuation from the word counts.</p>
+              <h3 class="card-title">JavaScript</h3>
+              <p>JavaScript was the primary technology used in the creation of the application. Specifically, I chose to build this project to work on implementing AJAX in a project, which grabbed the document from the server. Then I was able to manipulate the DOM (Document Object Model) to embed the document in the page.
+                 <br><br>
+                 Regular Expressions (RegEx) were also used to filter the document data and eliminate line breaks, carriage returns, and punctuation from the word counts.
+              </p>
             </div>
           </div>
         </li>
@@ -58,7 +61,7 @@
             <img src="https://github.com/Justin-Cordero/BookStats_Preview/blob/main/images/css_logo.png?raw=true" alt="technology-3">
             <div class="card-content">
               <h3 class="card-title">CSS</h3>
-              <p>Some standard CSS was used in this project to improve the look of the application.<br><br> Media queries were also included to improve the responsiveness across screen sizes where bootstrap classes were not used.</p>
+              <p>Some standard CSS was used in this project to improve the look of the application.<br><br> Media queries were also included to improve the responsiveness across screen sizes where Bootstrap classes were not used.</p>
             </div>
           </div>
         </li>
@@ -69,7 +72,9 @@
     <section id="section-c" class="grid">
       <div class="content-wrap">
         <h2 class="content-title">Result</h2>
-        <p>There was a lot learned building this project. It is fully functional, works properly, and has a clean (albeit simple) user interface. In the future, I would like to improve upon this project by adding some additional features to make it more useful for a larger audience. Currently it only allows you to see the stats of books that I have uploaded using a free-for-use ebook website (credits listed in project). Allowing users to upload their own books or documents would increase the usefulness of this application. This is something I plan on expanding upon in the future. Thanks for checking out my work.</p>
+        <p>
+            There was a lot learned building this project. It is fully functional with a clean, albeit simple, user interface. In the future, I would like to improve upon this project by adding some additional features to make it more. Currently it only allows you to see the stats of books that I have already uploaded using a free-for-use eBook website (credits listed in project). Allowing users to upload their own books or documents would increase the usefulness of this application. This is something I plan on expanding upon in the future. Thanks for checking out my work.
+        </p>
       </div>
     </section>
   
