--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="content-wrap">
         <h2 class="content-title">Result</h2>
         <p>
-            There was a lot learned building this project. It is fully functional with a clean, albeit simple, user interface. In the future, I would like to improve upon this project by adding some additional features to make it more. Currently it only allows you to see the stats of books that I have already uploaded using a free-for-use eBook website (credits listed in project). Allowing users to upload their own books or documents would increase the usefulness of this application. This is something I plan on expanding upon in the future. Thanks for checking out my work.
+            There was a lot learned building this project. It is fully functional with a clean, albeit simple, user interface. In the future, I would like to improve upon this project by adding some additional features. Currently it only allows you to see the stats of books that I have already uploaded using a free-for-use eBook website (credits listed in project). Allowing users to upload their own books or documents would increase the usefulness of this application. This is something I plan on expanding upon in the future. Thanks for checking out my work.
         </p>
       </div>
     </section>
